COP-4326 add changelog about deprecated SSE protocol for MCP servers

--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -3322,7 +3322,7 @@ components:
         transport: streamable_http
         enabled: true
         config:
-          url: 'http://localhost:7900/cmp'
+          url: 'http://localhost:7900/mcp'
           authorizationHeaderName: Authorization
           authorizationHeaderTokenId: token-id
     TokenRequest:
