--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -2207,7 +2207,7 @@ components:
               description: For the `PredefinedMcpServer` it has to be set to `predefined`.
               example: predefined
             domain:
-              enum: [ customer,extensibility,order,product ]
+              enum: [ customer,extensibility,order,product,frontend ]
             tools:
               type: array
               description: List of the tools which should be used by the agent from this particular MCP server.
