--- a/catalogs-and-categories/category-tree/api-reference/api.yml
+++ b/catalogs-and-categories/category-tree/api-reference/api.yml
@@ -3279,7 +3279,7 @@ components:
         name:
           type: string
           description: Name of the mixin.
-          pattern: '^[a-zA-Z0-9]\S*$'
+          pattern: '^[a-zA-Z0-9_]\S*$'
         schemaUrl:
           type: string
           description: URL of the mixin schema.
@@ -3297,7 +3297,7 @@ components:
         name:
           type: string
           description: Name of the mixin
-          pattern: '^[a-zA-Z0-9]\S*$'
+          pattern: '^[a-zA-Z0-9_]\S*$'
         mixinPath:
           type: string
           description: The mixins path that should be used when defining attributes on a product. It's built based on the following pattern - `class_<sourceCategory.code>_<name>`.
