--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -2147,7 +2147,7 @@ components:
                   name:
                     type: string
                     description: Name of the mixin
-                    pattern: '^[a-zA-Z0-9]\S*$'
+                    pattern: '^[a-zA-Z0-9_]\S*$'
                   mixinPath:
                     type: string
                     description: The mixins path that should be used when defining attributes on a product. It's built based on the following pattern - `class_<sourceCategory.code>_<name>`.
