--- a/configuration/country-service/api-reference/api.yml
+++ b/configuration/country-service/api-reference/api.yml
@@ -63,12 +63,9 @@ paths:
         - $ref: '#/components/parameters/Price-api_Trait_acceptLanguage_header'
         - $ref: '#/components/parameters/trait_x-version-header'
     patch:
-      summary: Update a country
+      summary: Updating a country
       description: |-
         Updates a country. It is possible to update `active` field only. The field indicates whether the given country is active for the tenant or not. Only active countries are visible in the system.
-
-        **Required scopes**
-        * country.country_manage
       security:
         - OAuth2:
             - country.country_manage
@@ -249,6 +246,10 @@ components:
             version:
               type: number
               description: Version of the document. The version is used for optimistic locking mechanism during the update request.
+          required:
+            - version
+      required:
+        - metadata
   responses:
     GetCountry:
       description: The request was successful. The requested country is returned.
@@ -327,7 +328,7 @@ components:
                     modifiedAt: '2022-03-31T13:18:02.379Z'
                     version: 1
     BadRequest_400:
-      description: Request was syntactically incorrect. Details will be provided in the response payload.
+      description: Request was syntactically incorrect. Details are provided in the response payload.
       content:
         application/json:
           schema:
@@ -336,7 +337,7 @@ components:
             Ambiguous tenant:
               $ref: '#/components/examples/BadRequest400_AmbiguousTenant'
     Unauthorized_401:
-      description: Given request is unauthorized - the authorization token is invalid or has expired. Details will be provided in the response payload.
+      description: Given request is unauthorized - the authorization token is invalid or has expired. Details are provided in the response payload.
       content:
         application/json:
           schema:
@@ -499,7 +500,7 @@ components:
       schema:
         type: string
       description: |
-        Country codes. When specified, only countries containing the specified code will be returned.
+        Country codes. When specified, only countries containing the specified code are returned.
 
         **Note**: When filtering the results with this field, the `contains` operator is used. The operator is case-insensitive.
     trait_country_name_query_param:
@@ -509,7 +510,7 @@ components:
       schema:
         type: string
       description: |
-        Country names. When specified, only countries containing the specified names will be returned.
+        Country names. When specified, only countries containing the specified names are returned.
 
         **Important**: See how the `Accept-Language` header influences this parameter:
           * If The `Accept-Language` header is set to `*`, you need to specify a language in this parameter.
@@ -528,7 +529,7 @@ components:
       schema:
         type: string
       description: |
-        Region names. When specified, only regions containing the specified names will be returned.
+        Region names. When specified, only regions containing the specified names are returned.
 
         **Important**: See how the `Accept-Language` header influences this parameter:
           * If The `Accept-Language` header is set to `*`, you need to specify a language in this parameter.
@@ -547,7 +548,7 @@ components:
       schema:
         type: string
       description: |
-        Country active status, expressed as `true` or `false`. When specified, only countries with the active status will be returned.
+        Country active status, expressed as `true` or `false`. When specified, only countries with the active status are returned.
 
         **Note**: When filtering the results with this field, the `equals` operator is used.
     trait_country_regions_query_param:
@@ -557,7 +558,7 @@ components:
       schema:
         type: string
       description: |
-        Country region codes. When specified, only countries containing the specified region codes will be returned.
+        Country region codes. When specified, only countries containing the specified region codes are returned.
 
         **Note**: When filtering the results with this field, the `contains` operator is used.
     trait_region_code_query_param:
@@ -567,7 +568,7 @@ components:
       schema:
         type: string
       description: |
-        Region codes. When specified, only regions containing the specified codes will be returned.
+        Region codes. When specified, only regions containing the specified codes are returned.
 
         **Note**: When filtering the results with this field, the `contains` operator is used.
     Price-api_Trait_acceptLanguage_header:
@@ -577,7 +578,7 @@ components:
       description: |
         List of language codes acceptable for the response. You can specify factors that indicate which language should be retrieved if the one with a higher factor was not found in the localized fields.
 
-        **Note**: If not specified, localized fields will be retrieved in English.
+        **Note**: If not specified, localized fields are retrieved in English.
       schema:
         type: string
         example: 'fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7'
@@ -587,6 +588,8 @@ components:
       required: true
       schema:
         type: string
+        pattern: '^v[1-9][0-9]?$'
+        example: v2
       description: The X-Version header with value v2 is required for the endpoint.
   securitySchemes:
     OAuth2:
