Add additionalProperties: false to schema definitions in api.yml

--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -2339,6 +2339,7 @@ components:
               $ref: '#/components/schemas/id'
           required:
             - id
+      additionalProperties: false
     bundleProduct:
       type: object
       additionalProperties: false
