--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -1643,7 +1643,6 @@ components:
           example:
             published: true
     productBulkUpdateBody:
-      description: A list of product update requests.
       content:
         application/json:
           schema:
@@ -1660,8 +1659,14 @@ components:
                 - id: "abc-123"
                   code: "532432412331"
                   name: "Product 1"
+                - id: "abc-123"
+                  code: "532432412331"
+                  name: "Product 1"
                   metadata:
                     version: 1
+                - id: "abc-124"
+                  code: "532432412332"
+                  name: "Product 2"
                 - id: "abc-124"
                   code: "532432412332"
                   name: "Product 2"
@@ -1670,8 +1675,12 @@ components:
                 - id: "abc-125"
                   code: "532432412333"
                   name: "Product 3"
+                - id: "abc-125"
+                  code: "532432412333"
+                  name: "Product 3"
                   metadata:
                     version: 1
+
 
     productBulkCreateBody:
       content:
@@ -2214,7 +2223,7 @@ components:
             type: object
     productCore:
       type: object
-      description: Products.
+      description: Core product schema.
       properties:
         name:
           $ref: '#/components/schemas/localizedValue'
