COP-4409 block using  character in site code

--- a/configuration/site-settings-service/api-reference/api.yml
+++ b/configuration/site-settings-service/api-reference/api.yml
@@ -914,6 +914,7 @@ components:
       properties:
         code:
           type: string
+          pattern: ^[^\s#]+$
           description: Site unique identifier.
         name:
           type: string
