--- a/orders/order/api-reference/api.yml
+++ b/orders/order/api-reference/api.yml
@@ -3258,7 +3258,7 @@ components:
            + Searching for items by date property. All number-based property queries are valid also for dates. In that case the date should be placed within double quotes: `q=created:(>="2021-05-18T07:27:27.455Z" AND <"2021-05-20T07:27:27.455Z")`
            + Searching for items by boolean value: `q=customer.mixins.generalAttributes.invoiceNotDeliveryAddress:true` where `customer.mixins.generalAttributes.invoiceNotDeliveryAddress` is a name of boolean field and 'true' is it`s required value.
            + Searching for items with non existing or empty property: `q=billingAddress.contactPhone:null` where `billingAddress.contactPhone` is a name of fields that has value `null`.
-           + Searching for items with existing property: `q=mixin:exists` where `mixin` is a name of field that has `non null` value.
+           + Searching for items with existing property: `q=mixins.mixinName:exists` where the specific mixin named `mixinName` exists in the database.
            + Searching for items by multiple specific values: `q=id:(order_id1,order_id2)` where `id` is name of field and strings within a bracket are it's required value.
            + Searching for items by multiple fields: `q=id:order_id1 status:COMPLETED` where `id` and `status` are the names of fields. All documents that contain given values of these fields are returned. Multiple fields separated by space can be specified. Multiple values for each field can be also specified in a format presented above.
       schema:
