--- a/catalogs-and-categories/category-tree/api-reference/api.yml
+++ b/catalogs-and-categories/category-tree/api-reference/api.yml
@@ -671,10 +671,7 @@ paths:
         - name: Content-Language
           in: header
           description: |
-            The Content-Language request HTTP header defines language(s) of the payload. Request body may contain only translations that are matching the languages specified in the header.
-            Possible values:
-            * `*` - request body may contain translations for all languages specified in tenant configuration. This is also the default behaviour if the header is not set.
-            * `en`, `en,de`, `fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7, *;q=0.5` - request body may contain only translations for languages specified in the header (if they are available in tenant configuration) .
+            **Note**: The Content-Language header is not used for category requests. You must always provide localized fields (such as `localizedName`, `localizedDescription`, `localizedSlug`) as maps of language codes to values, regardless of the Content-Language header value.
           schema:
             type: string
             example: '`*`, `en`, `en,de,fr`, `en-EN`, `fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7`'
@@ -1326,10 +1323,7 @@ paths:
         - name: Content-Language
           in: header
           description: |
-            The Content-Language request HTTP header defines language(s) of the payload. Request body may contain only translations that are matching the languages specified in the header.
-            Possible values:
-            * `*` - request body may contain translations for all languages specified in tenant configuration. This is also the default behaviour if the header is not set.
-            * `en`, `en,de`, `fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7, *;q=0.5` - request body may contain only translations for languages specified in the header (if they are available in tenant configuration) .
+            **Note**: The Content-Language header is not used for category requests. You must always provide localized fields (such as `localizedName`, `localizedDescription`, `localizedSlug`) as maps of language codes to values, regardless of the Content-Language header value.
           schema:
             type: string
             example: '`*`, `en`, `en,de,fr`, `en-EN`, `fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7`'
@@ -1657,10 +1651,7 @@ paths:
         - name: Content-Language
           in: header
           description: |
-            The Content-Language request HTTP header defines language(s) of the payload. Request body may contain only translations that are matching the languages specified in the header.
-            Possible values:
-            * `*` - request body may contain translations for all languages specified in tenant configuration. This is also the default behaviour if the header is not set.
-            * `en`, `en,de`, `fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7, *;q=0.5` - request body may contain only translations for languages specified in the header (if they are available in tenant configuration) .
+            **Note**: The Content-Language header is not used for category requests. You must always provide localized fields (such as `localizedName`, `localizedDescription`, `localizedSlug`) as maps of language codes to values, regardless of the Content-Language header value.
           schema:
             type: string
             example: '`*`, `en`, `en,de,fr`, `en-EN`, `fr-CH, fr;q=0.9, en;q=0.8, de;q=0.7`'
