--- a/prices-and-taxes/price-service/api-reference/api.yml
+++ b/prices-and-taxes/price-service/api-reference/api.yml
@@ -115,6 +115,11 @@ paths:
       responses:
         '200':
           description: The request was successful. A list of prices is returned.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
+              description: Total number of retrieved prices.
           content:
             application/json:
               schema:
@@ -144,6 +149,7 @@ paths:
         - $ref: '#/components/parameters/trait_sortable_sort'
         - $ref: '#/components/parameters/trait_paged_pageNumber'
         - $ref: '#/components/parameters/trait_paged_pageSize'
+        - $ref: '#/components/parameters/trait_XTotalCount_header'
         - $ref: '#/components/parameters/trait_principalIdAware_principalId'
         - $ref: '#/components/parameters/trait_priceModelIdAware_priceModelId'
         - schema:
